
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________

2023 OCT 04a
  * in model/chem/
    - added _NH3_Plasma_34s/
  * in model/share/chem_share.c
    - added functions add_to_W_fw_2r4p() and add_to_dW_fw_2r4p()
  * in model/thermo/_generic/enthalpy.c and model/thermo/_generic/thermo.c and
    model/transport/_Dixon-Lewis/transport.c
    - added species NNH, N2H2, N2H3, N2H4, H-, H3+, N3+, N4+, NH2-, NH+, NNH+, H2P, H2C1Pi, N2D,
      H3, N4, N3


2023 OCT 03a
  * in model/fluid/_Favre*/fluid.c
    - in read_model_fluid_actions() added TURBMODEL_SST1994
  * in model/share/fluid_share.c
    - in _ktilde(), _eps(), _omega(), _etat_from_rho_eta_k_psitilde(), _etakstar(), _etapsistar(),
      find_k_psi_bdry_wall(),  _factepsilon(), find_Stnorm(), find_dStnorm_dU(), find_dStcomp_dU()
      added code for TURBMODEL_SST1994
    - added function _F1() needed for TURBMODEL_SST1994
    - in _etat_from_rho_eta_k_psitilde(), fixed a bug with KOMEGA2008 model: sum was set to zero
      after being computed while it shouldn't be
  * in src/control.c
    - in find_wall_distance(), removed the calls to OMP threading (will lead to problems because
      there is no nodelock implemented here)
  * in bin
    - added shearlayer.wrp
    

2023 OCT 02b
  * in model/chem/_NH3_Plasma_10s/bavafa2008.c
    - removed unused variables
  * in model/chem/_NH3_Plasma_10s/bavafa2008.h
    - added np parameter to find_W_bavafa2008 and to find_dW_dx_bavafa2008
  * in model/chem/_NH3_Plasma_10s/chem.c
    - added np parameter to find_W_bavafa2008 and to find_dW_dx_bavafa2008 calls
  * in src/main.c
    - changed gl.AVERAGEDRATES=AVERAGEDRATES_SET to gl.AVERAGEDRATES=AVERAGEDRATES_OFF
    

2023 OCT 02a
  * in cycle/_standard/cycle.c and cycle/share/cycle_share.c and model/share/chem_share.c